--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Simple calculator</h1>
+    <input type="text">
+    <button class="js-plus">Plus</button>
+    <button class="js-minus">Minus</button>
+    <button>Multiply</button>
+    <button>Divide</button>
+    <input type="text">
+    <img src="" alt="Barts Simpson">
+    <span></span>
 </body>
+<script src="script.js">
+
+</script>
 </html>
